tests/fixtures/invalid/int_pow_bytes.py
# Cannot raise Int to Bytes power
x: int = 2 ** b"hello"
